<?xml version="1.0" encoding="utf-8"?>


<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:background="@color/fundo">

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nome"
        style="@style/Hints"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/edtCelular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/celular"
        android:inputType="phone"
        style="@style/Hints"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtNome"/>

    <RadioGroup
        android:id="@+id/rdgSetor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Hints"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtCelular">

        <RadioButton
            android:id="@+id/rdPessoal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pessoal"
            android:checked="true"
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/rdTrabalho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/trabalho"
            android:onClick="onRadioButtonClicked" />

    </RadioGroup>

    <EditText
        android:id="@+id/edtReferencia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Hints"
        android:hint="@string/referencia"
        android:checked="true"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/btnSalvar"
        app:layout_constraintTop_toBottomOf="@+id/rdgSetor" />

    <Button
        android:id="@+id/btnSalvar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/Botao"
        android:text="@string/btnsalvar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtReferencia" />


</androidx.constraintlayout.widget.ConstraintLayout>